--- a/superlists/lists/templates/view.html
+++ b/superlists/lists/templates/view.html
@@ -2,7 +2,6 @@
     <head>
         <title>To-Do lists</title>
     </head>
-
     <body>
         <h1>Your To-Do list</h1>
         <form method="POST" action="/lists/{{ list.id }}/add_item">
@@ -11,10 +10,9 @@
         </form>
 
         <table id="id_list_table">
-            {% for item in list.item_set.all %}
+            {% for item in items %}
                 <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
             {% endfor %}
         </table>
-
     </body>
 </html>
