--- a/superlists/lists/templates/base.html
+++ b/superlists/lists/templates/base.html
@@ -8,9 +8,28 @@
 </head>
 
 <body>
+<div class="container">
 
-<div class='container'>
-{% block content %}{% endblock %}
+	<div class="row">
+		<div class="col-md-6 col-md-offset-3">
+			<div class="text-center">
+				<h1>{% block header_text %}{% endblock %}</h1>
+				<form method="POST" action={% block form_action %}{% endblock %}>
+					<p style="text-align:center;">
+						<input name="item_text" id="id_new_item" placeholder="Enter a to-do item" />
+					</p>
+				{% csrf_token %}
+				</form>
+			</div>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-md-6 col-md-offset-3">
+			{% block table %}{% endblock %}
+		</div>
+	</div>
+
 </div>
 
 <div class='footer'>
@@ -20,7 +39,7 @@
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="js/bootstrap.min.js"></script>
+<script src="/static/js/bootstrap.min.js"></script>
 </body>
 
 </html>
